crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// The limit comparison an INA226 alert pin responds to.
typedef enum {
  // Shunt voltage above the alert limit.
  PamojaIna226AlertFunction_ShuntOverLimit = 0,
  // Shunt voltage below the alert limit.
  PamojaIna226AlertFunction_ShuntUnderLimit = 1,
  // Bus voltage above the alert limit.
  PamojaIna226AlertFunction_BusOverLimit = 2,
  // Bus voltage below the alert limit.
  PamojaIna226AlertFunction_BusUnderLimit = 3,
  // Power above the alert limit.
  PamojaIna226AlertFunction_PowerOverLimit = 4,
} PamojaIna226AlertFunction;
// An OPT3001 configuration register, field by field.
typedef struct {
  // The full-scale range number, `0..=11`, or `12` to set the range automatically.
  uint8_t range_number;
  // `1` makes a conversion take 800 ms rather than 100 ms.
  uint8_t long_conversion;
  // The mode code: `0` shutdown, `1` single shot, `2` continuous.
  uint8_t mode;
  // `1` when the last result overflowed its range.
  uint8_t overflow;
  // `1` when a conversion has completed since the register was last read.
  uint8_t conversion_ready;
  // `1` when the result went above the high limit.
  uint8_t flag_high;
  // `1` when the result went below the low limit.
  uint8_t flag_low;
  // `1` latches the INT pin until the configuration register is read.
  uint8_t latched_window;
  // `1` makes the INT pin active high.
  uint8_t active_high;
  // `1` makes the limit registers carry a mantissa alone, without an exponent.
  uint8_t mask_exponent;
  // The fault-count code, `0..=3`, for one, two, four, or eight faults.
  uint8_t fault_count;
} PamojaOpt3001Config;
// An INA226 configuration register, field by field.
typedef struct {
  // `1` resets the part when this register is written.
  uint8_t reset;
  // The averaging code, `0..=7`, from 1 to 1024 samples.
  uint8_t averaging;
  // The bus-voltage conversion-time code, `0..=7`.
  uint8_t bus_conversion_time;
  // The shunt-voltage conversion-time code, `0..=7`.
  uint8_t shunt_conversion_time;
  // The operating-mode code, `0..=7`.
  uint8_t mode;
} PamojaIna226Config;
// An INA226 Mask/Enable register, field by field.
typedef struct {
  // `1` alerts when the shunt voltage exceeds the limit.
  uint8_t shunt_over_limit;
  // `1` alerts when the shunt voltage drops below the limit.
  uint8_t shunt_under_limit;
  // `1` alerts when the bus voltage exceeds the limit.
  uint8_t bus_over_limit;
  // `1` alerts when the bus voltage drops below the limit.
  uint8_t bus_under_limit;
  // `1` alerts when the power exceeds the limit.
  uint8_t power_over_limit;
  // `1` also alerts when a conversion completes.
  uint8_t conversion_ready;
  // `1` when the selected limit function caused the last alert.
  uint8_t alert_function_flag;
  // `1` when every conversion and multiplication has completed.
  uint8_t conversion_ready_flag;
  // `1` when an arithmetic overflow left current and power invalid.
  uint8_t math_overflow;
  // `1` makes the alert pin active high.
  uint8_t alert_active_high;
  // `1` latches the alert pin until this register is read.
  uint8_t alert_latch;
} PamojaIna226MaskEnable;
// A decoded INA226 die-ID register.
typedef struct {
  // The 12-bit device identifier.
  uint16_t device;
  // The 4-bit die revision.
  uint8_t revision;
} PamojaIna226DieId;
// Builds the OPT3001 result register that decodes to an illuminance.
//
// # Returns
//
// The register value, using the smallest exponent that fits and saturating at
// full scale.
uint16_t pamoja_opt3001_raw_from_milli_lux(uint32_t milli_lux);
// Reads the two bytes an OPT3001 sends for a register, most significant first.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_word` set, or
// [`PamojaStatus::InvalidArgument`] if the buffer is not two bytes.
//
// # Safety
//
// `bytes` must point to at least `bytes_len` readable bytes, and `out_word` must
// point to a writable `uint16_t`.
PamojaStatus pamoja_opt3001_word_from_bytes(const uint8_t *bytes,
                                            uintptr_t bytes_len,
                                            uint16_t *out_word);
// Builds the two bytes an OPT3001 sends for a register, most significant first.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the two bytes written to `out_bytes`, or
// [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least two writable bytes.
PamojaStatus pamoja_opt3001_word_to_bytes(uint16_t word, uint8_t *out_bytes);
// Assembles the 16-bit OPT3001 configuration register value.
//
// # Returns
//
// The register value to write, with the read-only status bits written as zero.
uint16_t pamoja_opt3001_config_bits(PamojaOpt3001Config config);
// Parses a 16-bit OPT3001 configuration register value.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_config` filled in. Every register value
// decodes, so this fails only on a null pointer.
//
// # Safety
//
// `out_config` must point to a writable `PamojaOpt3001Config`.
PamojaStatus pamoja_opt3001_config_from_bits(uint16_t bits, PamojaOpt3001Config *out_config);
// Returns the conversion time an OPT3001 setting selects.
//
// # Returns
//
// The time in milliseconds: 800 for the long conversion, 100 otherwise.
uint16_t pamoja_opt3001_conversion_millis(bool long_conversion);
// Returns how many consecutive faults an OPT3001 fault-count code requires.
//
// # Returns
//
// The fault count: 1, 2, 4, or 8.
uint8_t pamoja_opt3001_fault_count(uint8_t code);
// Reports whether an OPT3001 range number sets the full scale automatically.
//
// # Returns
//
// `true` for the automatic range number, which has no fixed full scale.
bool pamoja_opt3001_is_automatic_range(uint8_t range_number);
// Returns the I2C address an INA226's A1 and A0 pin codes select.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_address` set to a 7-bit address in
// `0x40..=0x4F`, or [`PamojaStatus::InvalidArgument`] if either code is above 3.
//
// # Safety
//
// `out_address` must point to a writable `uint8_t`.
PamojaStatus pamoja_ina226_address(uint8_t a1, uint8_t a0, uint8_t *out_address);
// Returns how many samples an INA226 averaging code folds into one result.
//
// # Returns
//
// The sample count, from 1 to 1024.
uint16_t pamoja_ina226_averaging_samples(uint8_t code);
// Returns the conversion time an INA226 code selects.
//
// # Returns
//
// The time in microseconds.
uint32_t pamoja_ina226_conversion_micros(uint8_t code);
// Reports whether an INA226 mode code converts the shunt voltage.
//
// # Returns
//
// `true` when the shunt is measured in that mode.
bool pamoja_ina226_measures_shunt(uint8_t code);
// Reports whether an INA226 mode code converts the bus voltage.
//
// # Returns
//
// `true` when the bus is measured in that mode.
bool pamoja_ina226_measures_bus(uint8_t code);
// Reports whether an INA226 mode code keeps converting after the first result.
//
// # Returns
//
// `true` for the continuous modes.
bool pamoja_ina226_is_continuous(uint8_t code);
// Parses an INA226 configuration register value.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_config` filled in. Every register value
// decodes, so this fails only on a null pointer.
//
// # Safety
//
// `out_config` must point to a writable `PamojaIna226Config`.
PamojaStatus pamoja_ina226_config_from_register(uint16_t raw, PamojaIna226Config *out_config);
// Assembles an INA226 configuration register value.
//
// # Returns
//
// The register value to write.
uint16_t pamoja_ina226_config_to_register(PamojaIna226Config config);
// Returns how often an INA226 in a configuration updates its results.
//
// # Returns
//
// The interval in microseconds: every conversion the mode takes, averaged.
uint32_t pamoja_ina226_update_micros(PamojaIna226Config config);
// Parses an INA226 Mask/Enable register value.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_mask` filled in. Every register value
// decodes, so this fails only on a null pointer.
//
// # Safety
//
// `out_mask` must point to a writable `PamojaIna226MaskEnable`.
PamojaStatus pamoja_ina226_mask_enable_from_register(uint16_t raw,
                                                     PamojaIna226MaskEnable *out_mask);
// Assembles an INA226 Mask/Enable register value.
//
// # Returns
//
// The register value to write, with the read-only flags written as zero.
uint16_t pamoja_ina226_mask_enable_to_register(PamojaIna226MaskEnable mask);
// Returns the alert function an INA226 pin actually responds to.
//
// # Returns
//
// `true` when one limit function is selected, with `*out_function` set to it;
// `false` when none is, so the pin only ever signals a completed conversion.
//
// # Safety
//
// `out_function` must point to a writable `PamojaIna226AlertFunction`.
bool pamoja_ina226_active_alert_function(PamojaIna226MaskEnable mask,
                                         PamojaIna226AlertFunction *out_function);
// Splits an INA226 die-ID register into its device and revision fields.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_die_id` filled in. Every register value
// decodes, so this fails only on a null pointer.
//
// # Safety
//
// `out_die_id` must point to a writable `PamojaIna226DieId`.
PamojaStatus pamoja_ina226_die_id(uint16_t raw, PamojaIna226DieId *out_die_id);
// Checks that a pair of identification registers belongs to an INA226.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_die_id` filled in, or
// [`PamojaStatus::Codec`] if either register carries something other than the
// values the datasheet fixes, which means a different part, or nothing at all,
// answered at that address.
//
// # Safety
//
// `out_die_id` must point to a writable `PamojaIna226DieId`.
PamojaStatus pamoja_ina226_identify(uint16_t manufacturer_id,
                                    uint16_t die_id,
                                    PamojaIna226DieId *out_die_id);
// Computes the INA226 calibration register for a shunt and current resolution.
//
// # Returns
//
// The register value to write.
uint16_t pamoja_ina226_calibration(uint32_t current_lsb_microamps, uint32_t shunt_milliohms);
// Returns the smallest current resolution that still covers an expected maximum.
//
// # Returns
//
// The current LSB in microamps.
uint32_t pamoja_ina226_minimum_current_lsb_microamps(uint32_t max_expected_microamps);
// Converts a raw INA226 shunt-voltage register to nanovolts.
//
// # Returns
//
// The shunt voltage, exact in integer arithmetic at 2.5 uV per count.
int32_t pamoja_ina226_shunt_nanovolts(int16_t raw);
// Converts a raw INA226 shunt-voltage register to millivolts.
//
// # Returns
//
// The shunt voltage.
float pamoja_ina226_shunt_millivolts(int16_t raw);
// Converts a raw INA226 bus-voltage register to microvolts.
//
// # Returns
//
// The bus voltage, exact in integer arithmetic at 1.25 mV per count.
uint32_t pamoja_ina226_bus_microvolts(uint16_t raw);
// Converts a raw INA226 bus-voltage register to volts.
//
// # Returns
//
// The bus voltage.
float pamoja_ina226_bus_volts(uint16_t raw);
// Converts a raw INA226 current register to microamps.
//
// # Returns
//
// The current, at the resolution the calibration selected.
int32_t pamoja_ina226_current_microamps(int16_t raw, uint32_t current_lsb_microamps);
// Converts a raw INA226 current register to amps.
//
// # Returns
//
// The current.
float pamoja_ina226_current_amps(int16_t raw, uint32_t current_lsb_microamps);
// Converts a raw INA226 power register to microwatts.
//
// # Returns
//
// The power. The power LSB is fixed at twenty-five times the current LSB.
uint32_t pamoja_ina226_power_microwatts(uint16_t raw, uint32_t current_lsb_microamps);
// Converts a raw INA226 power register to watts.
//
// # Returns
//
// The power.
float pamoja_ina226_power_watts(uint16_t raw, uint32_t current_lsb_microamps);
// Builds the INA226 shunt-voltage register a monitor reports for a shunt voltage.
//
// # Returns
//
// The signed register value, at 2.5 uV per count.
int16_t pamoja_ina226_shunt_register(int32_t nanovolts);