bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Sensing.cs


    /// <summary>
    /// Builds the OPT3001 result register that decodes to an illuminance. # Returns The
    /// register value, using the smallest exponent that fits and saturating at full scale.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_opt3001_raw_from_milli_lux(uint milliLux);

    /// <summary>
    /// Reads the two bytes an OPT3001 sends for a register, most significant first. #
    /// Returns [PamojaStatus::Ok] on success, with *out_word set, or
    /// [PamojaStatus::InvalidArgument] if the buffer is not two bytes. # Safety bytes must
    /// point to at least bytes_len readable bytes, and out_word must point to a writable
    /// uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_word_from_bytes(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out ushort outWord);

    /// <summary>
    /// Builds the two bytes an OPT3001 sends for a register, most significant first. #
    /// Returns [PamojaStatus::Ok] on success, with the two bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least two writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_word_to_bytes(
        ushort word,
        Span<byte> outBytes);

    /// <summary>
    /// Assembles the 16-bit OPT3001 configuration register value. # Returns The register
    /// value to write, with the read-only status bits written as zero.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_opt3001_config_bits(PamojaOpt3001Config config);

    /// <summary>
    /// Parses a 16-bit OPT3001 configuration register value. # Returns [PamojaStatus::Ok],
    /// with *out_config filled in. Every register value decodes, so this fails only on a
    /// null pointer. # Safety out_config must point to a writable PamojaOpt3001Config.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_config_from_bits(
        ushort bits,
        out PamojaOpt3001Config outConfig);

    /// <summary>
    /// Returns the conversion time an OPT3001 setting selects. # Returns The time in
    /// milliseconds: 800 for the long conversion, 100 otherwise.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_opt3001_conversion_millis(
        [MarshalAs(UnmanagedType.U1)] bool longConversion);

    /// <summary>
    /// Returns how many consecutive faults an OPT3001 fault-count code requires. # Returns
    /// The fault count: 1, 2, 4, or 8.
    /// </summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_opt3001_fault_count(byte code);

    /// <summary>
    /// Reports whether an OPT3001 range number sets the full scale automatically. # Returns
    /// true for the automatic range number, which has no fixed full scale.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_opt3001_is_automatic_range(byte rangeNumber);

    /// <summary>
    /// Returns the I2C address an INA226's A1 and A0 pin codes select. # Returns
    /// [PamojaStatus::Ok] on success, with *out_address set to a 7-bit address in
    /// 0x40..=0x4F, or [PamojaStatus::InvalidArgument] if either code is above 3. # Safety
    /// out_address must point to a writable uint8_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_address(
        byte a1,
        byte a0,
        out byte outAddress);

    /// <summary>
    /// Returns how many samples an INA226 averaging code folds into one result. # Returns
    /// The sample count, from 1 to 1024.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_averaging_samples(byte code);

    /// <summary>
    /// Returns the conversion time an INA226 code selects. # Returns The time in
    /// microseconds.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina226_conversion_micros(byte code);

    /// <summary>
    /// Reports whether an INA226 mode code converts the shunt voltage. # Returns true when
    /// the shunt is measured in that mode.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_ina226_measures_shunt(byte code);

    /// <summary>
    /// Reports whether an INA226 mode code converts the bus voltage. # Returns true when
    /// the bus is measured in that mode.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_ina226_measures_bus(byte code);

    /// <summary>
    /// Reports whether an INA226 mode code keeps converting after the first result. #
    /// Returns true for the continuous modes.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_ina226_is_continuous(byte code);

    /// <summary>
    /// Parses an INA226 configuration register value. # Returns [PamojaStatus::Ok], with
    /// *out_config filled in. Every register value decodes, so this fails only on a null
    /// pointer. # Safety out_config must point to a writable PamojaIna226Config.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_config_from_register(
        ushort raw,
        out PamojaIna226Config outConfig);

    /// <summary>
    /// Assembles an INA226 configuration register value. # Returns The register value to
    /// write.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_config_to_register(PamojaIna226Config config);

    /// <summary>
    /// Returns how often an INA226 in a configuration updates its results. # Returns The
    /// interval in microseconds: every conversion the mode takes, averaged.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina226_update_micros(PamojaIna226Config config);

    /// <summary>
    /// Parses an INA226 Mask/Enable register value. # Returns [PamojaStatus::Ok], with
    /// *out_mask filled in. Every register value decodes, so this fails only on a null
    /// pointer. # Safety out_mask must point to a writable PamojaIna226MaskEnable.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_mask_enable_from_register(
        ushort raw,
        out PamojaIna226MaskEnable outMask);

    /// <summary>
    /// Assembles an INA226 Mask/Enable register value. # Returns The register value to
    /// write, with the read-only flags written as zero.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_mask_enable_to_register(PamojaIna226MaskEnable mask);

    /// <summary>
    /// Returns the alert function an INA226 pin actually responds to. # Returns true when
    /// one limit function is selected, with *out_function set to it; false when none is, so
    /// the pin only ever signals a completed conversion. # Safety out_function must point
    /// to a writable PamojaIna226AlertFunction.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_ina226_active_alert_function(
        PamojaIna226MaskEnable mask,
        out PamojaIna226AlertFunction outFunction);

    /// <summary>
    /// Splits an INA226 die-ID register into its device and revision fields. # Returns
    /// [PamojaStatus::Ok], with *out_die_id filled in. Every register value decodes, so
    /// this fails only on a null pointer. # Safety out_die_id must point to a writable
    /// PamojaIna226DieId.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_die_id(
        ushort raw,
        out PamojaIna226DieId outDieId);

    /// <summary>
    /// Checks that a pair of identification registers belongs to an INA226. # Returns
    /// [PamojaStatus::Ok] on success, with *out_die_id filled in, or [PamojaStatus::Codec]
    /// if either register carries something other than the values the datasheet fixes,
    /// which means a different part, or nothing at all, answered at that address. # Safety
    /// out_die_id must point to a writable PamojaIna226DieId.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina226_identify(
        ushort manufacturerId,
        ushort dieId,
        out PamojaIna226DieId outDieId);

    /// <summary>
    /// Computes the INA226 calibration register for a shunt and current resolution. #
    /// Returns The register value to write.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina226_calibration(
        uint currentLsbMicroamps,
        uint shuntMilliohms);

    /// <summary>
    /// Returns the smallest current resolution that still covers an expected maximum. #
    /// Returns The current LSB in microamps.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina226_minimum_current_lsb_microamps(uint maxExpectedMicroamps);

    /// <summary>
    /// Converts a raw INA226 shunt-voltage register to nanovolts. # Returns The shunt
    /// voltage, exact in integer arithmetic at 2.5 uV per count.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_ina226_shunt_nanovolts(short raw);

    /// <summary>
    /// Converts a raw INA226 shunt-voltage register to millivolts. # Returns The shunt
    /// voltage.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_ina226_shunt_millivolts(short raw);

    /// <summary>
    /// Converts a raw INA226 bus-voltage register to microvolts. # Returns The bus voltage,
    /// exact in integer arithmetic at 1.25 mV per count.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina226_bus_microvolts(ushort raw);

    /// <summary>Converts a raw INA226 bus-voltage register to volts. # Returns The bus voltage.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_ina226_bus_volts(ushort raw);

    /// <summary>
    /// Converts a raw INA226 current register to microamps. # Returns The current, at the
    /// resolution the calibration selected.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_ina226_current_microamps(
        short raw,
        uint currentLsbMicroamps);

    /// <summary>Converts a raw INA226 current register to amps. # Returns The current.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_ina226_current_amps(
        short raw,
        uint currentLsbMicroamps);

    /// <summary>
    /// Converts a raw INA226 power register to microwatts. # Returns The power. The power
    /// LSB is fixed at twenty-five times the current LSB.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina226_power_microwatts(
        ushort raw,
        uint currentLsbMicroamps);

    /// <summary>Converts a raw INA226 power register to watts. # Returns The power.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_ina226_power_watts(
        ushort raw,
        uint currentLsbMicroamps);

    /// <summary>
    /// Builds the INA226 shunt-voltage register a monitor reports for a shunt voltage. #
    /// Returns The signed register value, at 2.5 uV per count.
    /// </summary>
    [LibraryImport(Library)]
    public static partial short pamoja_ina226_shunt_register(int nanovolts);
